# project-rome

./: .gitignore  CHANGELOG.md  License.txt  NOTICE  NOTICE.txt  README.md  ThirdPartyNotices.txt  cross-device_app_configuration.md
Android/: README.md
Android/how-to guides/: discover-remote-devices-android.md  getting-started-rome-android.md
AppService/: README.md
MSGraph/: README.md
Microsoft-graph/: README.md
Project Rome for Android/: README.md
Project Rome for Android (preview release)/: License.txt  ProGuard_Rules_for_Android_Rome_SDK.txt  README.md
Project Rome for Microsoft Graph/: README.md
Project Rome for Windows/: README.md
Project Rome for iOS (preview release)/: BinaryClient.md  CDOAuthCodeProviderDelegate.md  CDPlatform.md  CDRemoteLauncher.md  CDRemoteLauncherOptions.md  CDRemoteLauncherUriStatus.md  CDRemoteSystemAdditions.md  CDRemoteSystemConnectionRequest.md  CDRemoteSystemDiscovery.md  CDRemoteSystemDiscoveryDelegate.md  CDRemoteSystemDiscoveryExtensions.md  CDRemoteSystemFilter.md  CDRemoteSystemKind.md  CDRemoteSystemKindFilter.md  CDRemoteSystemStatus.md  LauncherOptions.md  README.md
Windows/: README.md
Xamarin/: readme.md
how-to guides/: communicate-with-a-remote-app-service-android.md  discover-remote-devices-android.md
iOS/: README.md
iOS/sample/: Podfile  (+13 more)
iOS/samples/account-provider-sample/: CMakeLists.txt
iOS/samples/account-provider-sample/include/: AADMSAAccountProvider.h  MSAAccountProvider.h
iOS/samples/account-provider-sample/src/: AADAccountProvider.m  MSATokenRequest.m
xamarin/: LICENSE  readme.md
(+649 files in other folders)
